fixed contrast issue with hero

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -101,7 +101,7 @@ main {
 
 /* Hero section styles */
 #hero {
-    background-color: #7c8e63;
+    background-color: #385115;
     color: white;
     padding: 50px 0;
     text-align: center;
